Made it look a bit better and fixed dates at the top

--- a/Forecast/templates/Forecast/table.html
+++ b/Forecast/templates/Forecast/table.html
@@ -10,13 +10,13 @@
             {% endfor %}
         </tr>
         <tr>
-            <th>TMAX</th>
+            <th>High</th>
             {% for max in tmax %}
             <td>{{ max }}</td>
             {% endfor %}
         </tr>
         <tr>
-            <th>TMIN</th>
+            <th>Low</th>
             {% for min in tmin %}
             <td>{{ min }}</td>
             {% endfor %}
