--- a/Forecast/static/Forecast/style.css
+++ b/Forecast/static/Forecast/style.css
@@ -3,11 +3,12 @@ h1 {
 }
 
 table {
-  border-collapse: collapse;
+    border-collapse: collapse;
 }
 
 table, th, td {
-  border: 1px solid black;
+    border: 1px solid black;
+    padding: 10px;
 }
 
 td {
